--- a/estetica/static/styles.css
+++ b/estetica/static/styles.css
@@ -17,6 +17,7 @@ header {
   width: 100%;
   box-sizing: border-box;
   position: fixed;
+  z-index: 10;
 }
 
 
@@ -175,24 +176,6 @@ header {
   border-bottom: 2px solid #e0a6c5;
 }
 
-/* .separador-servicios {
-  background: linear-gradient(
-    to bottom,
-    rgba(249, 132, 138, 0) 0%,     
-    #f9848a 20%,                  
-    #f9848a 80%,                  
-    rgba(249, 132, 138, 0) 100%   
-  );
-  padding: 40px 0;
-  text-align: center;
-  font-family: 'Playfair Display', serif;
-  font-size: 2rem;
-  color: #333;
-  margin-top: 50px;
-  margin-bottom: 30px;
-  border-top: 2px solid #e0a6c5;
-  border-bottom: 2px solid #e0a6c5;
-} */
 
 
 .contenedor-servicios {
@@ -211,6 +194,10 @@ header {
   gap: 30px;             
   justify-content: center;
   align-items: flex-start;
+}
+
+.oculto {
+  display: none;
 }
 
 
